--- a/style.css
+++ b/style.css
@@ -4,13 +4,26 @@ body{
 	background-size:cover;
 	background-attachment: fixed;
 }
+header {
+	border: 4px solid black;
+	margin: 10px 10px;
+	padding: 20px;
+	background: orange;
+	color: #008040;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    font-family: Gungsuh;
+	display: inline-block;
+}
+
 
 h3{
+
+font-family: Gungsuh;
 color: white;
-}
-h1{
-font-family: "Algerian";
-color: white;
+font-size: 40px;
+font-weight: bold;
 }
 
 loginpage{
@@ -20,30 +33,31 @@ margin: auto;
 }
 
 form{
-background:#006666;
+border: 3px solid black;
+text-transform: uppercase;
+background:Green;
 margin: auto;
 max-width: 460px;
-margin: 0 auto 100px;
+margin: auto;
 padding: 45px;
 text-align:center;
 }
 
 input{
-	font-family: "Segoe-UI";
-	otline: 0;
-	background: #99ffff;
+	font-family: Gungsuh;
+	background: Orange;
 	width: 100%;
 	border: 1;
 	margin: auto;
 	padding: 25px;
 	box-sizing: border-box;
-	font-size: 11px;
+	font-size: 15px;
 }
 
 
 button{
 	font-weight: bold;
-	font-family: "Segoe-UI";
+	font-family: "";
 	text-transform: uppercase;
 	background: #00ff00;
 	width:100%;
@@ -72,6 +86,7 @@ button{
 .form .register-form{
 	display: none;
 	}
+
 
 
 	
